<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background"
    tools:context=".SignupActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="14dp">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="34sp"
            android:src="@drawable/ic_baseline_person_add_alt_1_24" />

        <TextView
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:text="@string/sign_upp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="monospace" />


        <EditText
            android:id="@+id/SignupUsername"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/custom_plain_edit"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/username_text"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <EditText
            android:id="@+id/SignupPassword"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_plain_edit"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/username_password"
            android:inputType="numberPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/button"
            android:textColor="@color/white"
            android:layout_marginBottom="45dp"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/back_to_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/button"
            android:text="@string/log_back" />




    </LinearLayout>

    </LinearLayout>
